Fix horizontal scrollbar with language selector (#7302)

--- a/src/Aspire.Dashboard/wwwroot/css/app.css
+++ b/src/Aspire.Dashboard/wwwroot/css/app.css
@@ -737,7 +737,7 @@ fluent-switch.table-switch::part(label) {
 
 .language-select {
     margin-bottom: 2px;
-    min-width: 240px;
+    min-width: 235px;
 }
 
 .resources-filter-popup {
